[package]
name = "pulldown-cmark-plus"
version = "0.1.3"
edition = "2021"

description = "pulldown-cmark custom library"
license = "MIT"

[dependencies]
once_cell = "1.19.0"
pulldown-cmark = { version = "0.9.3", default-features = false }
syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
