[package]
name = "pulldown-cmark-plus"
version = "0.1.3"
edition = "2021"

description = "pulldown-cmark custom library"
license = "MIT"

[dependencies]
pulldown-cmark = { version = "0.9.3", default-features = false }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
